# renkon-sandbox

./: LICENSE  README.md  renkon-sandbox.cabal  stack.yaml
app/: Main.hs
template/{{name.camelized}}/: Class.hs  Instance.hs
