name:                renkon-sandbox
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/kayhide/renkon-sandbox#readme
license:             BSD3
license-file:        LICENSE
author:              kayhide
maintainer:          kayhide@gmail.com
copyright:           2017 kayhide
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable renkon-sandbox
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , file-embed
                     , bytestring
                     , text
                     , formatting
                     , inflections
                     , mustache
                     , optparse-declarative
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kayhide/renkon-sandbox
